Physisc Simulator application has moved to gradle